Prevent input elements from adding frames back into the primary frame map during their destruction (and leaving the map with dangling pointers) by passing the frame to functions that will be called during frame destruction to avoid calls to GetPrimaryFrameFor that will repopulate the primary frame map.  b=114220  r=jkeiser  sr=jst